[gd_scene load_steps=13 format=3 uid="uid://bauu0fl50lkr5"]

[ext_resource type="Script" path="res://scripts/train/car.gd" id="1_oecw2"]
[ext_resource type="Texture2D" uid="uid://cw2iyknxfg77v" path="res://sprites/train/engine.png" id="2_hspvl"]
[ext_resource type="AudioStream" uid="uid://dpq8xqakb6724" path="res://sounds/train/glass_break.ogg" id="3_jpwrk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_56ap2"]
size = Vector2(17, 386)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jbwp3"]
size = Vector2(23, 386)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g76ik"]
size = Vector2(121, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dsbl5"]
size = Vector2(121, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a1ef6"]
size = Vector2(161, 385)

[sub_resource type="Gradient" id="Gradient_c7mik"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gbbk1"]
gradient = SubResource("Gradient_c7mik")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.965812, 0.042735)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_635ql"]
b = Vector2(-1, 370)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_aoju7"]
b = Vector2(117, 0)

[node name="Car" type="Node2D" groups=["car"]]
script = ExtResource("1_oecw2")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.580392, 0.580392, 0.580392, 1)
position = Vector2(0, 171)
texture = ExtResource("2_hspvl")

[node name="CornerPoints" type="Node2D" parent="."]

[node name="TopLeft" type="Node2D" parent="CornerPoints"]
position = Vector2(-63, -16)

[node name="TopRight" type="Node2D" parent="CornerPoints"]
position = Vector2(63, -18)

[node name="BottomLeft" type="Node2D" parent="CornerPoints"]
position = Vector2(-63, 363)

[node name="BottomRight" type="Node2D" parent="CornerPoints"]
position = Vector2(63, 364)

[node name="TopCenter" type="Node2D" parent="CornerPoints"]

[node name="LeftWall" type="StaticBody2D" parent="."]
position = Vector2(0, 171)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
visible = false
position = Vector2(-42, 1)
shape = SubResource("RectangleShape2D_56ap2")

[node name="RightWall" type="StaticBody2D" parent="."]
position = Vector2(0, 171)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
visible = false
position = Vector2(38, 1)
shape = SubResource("RectangleShape2D_jbwp3")

[node name="TopWall" type="StaticBody2D" parent="."]
position = Vector2(0, 171)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall"]
visible = false
position = Vector2(1.5, -183)
shape = SubResource("RectangleShape2D_g76ik")
disabled = true

[node name="BottomWall" type="StaticBody2D" parent="."]
position = Vector2(0, 171)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomWall"]
visible = false
position = Vector2(0.5, 183)
shape = SubResource("RectangleShape2D_dsbl5")
disabled = true

[node name="PlayerDetector" type="Area2D" parent="."]
visible = false
position = Vector2(0, 171)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_a1ef6")

[node name="HealthBar" type="ProgressBar" parent="."]
process_mode = 3
modulate = Color(0, 0.807843, 0, 1)
offset_left = -60.0
offset_top = 158.0
offset_right = 62.0
offset_bottom = 185.0
mouse_filter = 2
max_value = 20.0
value = 20.0
metadata/_edit_use_anchors_ = true

[node name="HardPoints" type="Node2D" parent="."]
position = Vector2(0, 171)

[node name="FrontLeft" type="Node2D" parent="HardPoints"]
position = Vector2(-35, -192)

[node name="FrontRight" type="Node2D" parent="HardPoints"]
position = Vector2(39, -191)

[node name="LeftUpper" type="Node2D" parent="HardPoints"]
position = Vector2(-60, -94)

[node name="LeftLower" type="Node2D" parent="HardPoints"]
position = Vector2(-58, 94)

[node name="RightUpper" type="Node2D" parent="HardPoints"]
position = Vector2(63, -95)

[node name="RightLower" type="Node2D" parent="HardPoints"]
position = Vector2(63, 94)

[node name="BackLeft" type="Node2D" parent="HardPoints"]
position = Vector2(-31, 191)

[node name="BackRight" type="Node2D" parent="HardPoints"]
position = Vector2(39, 189)

[node name="Gadgets" type="Node2D" parent="."]

[node name="RoomLight" type="PointLight2D" parent="."]
position = Vector2(2.86102e-06, 171.5)
scale = Vector2(2, 5.79687)
enabled = false
texture = SubResource("GradientTexture2D_gbbk1")

[node name="BoardingPoints" type="Node2D" parent="."]

[node name="0" type="Node2D" parent="BoardingPoints"]

[node name="1" type="Node2D" parent="BoardingPoints"]
position = Vector2(0, 25)

[node name="2" type="Node2D" parent="BoardingPoints"]
position = Vector2(0, 50)

[node name="3" type="Node2D" parent="BoardingPoints"]
position = Vector2(0, 75)

[node name="4" type="Node2D" parent="BoardingPoints"]
position = Vector2(0, 100)

[node name="5" type="Node2D" parent="BoardingPoints"]
position = Vector2(0, 125)

[node name="6" type="Node2D" parent="BoardingPoints"]
position = Vector2(0, 150)

[node name="7" type="Node2D" parent="BoardingPoints"]
position = Vector2(0, 175)

[node name="8" type="Node2D" parent="BoardingPoints"]
position = Vector2(0, 200)

[node name="9" type="Node2D" parent="BoardingPoints"]
position = Vector2(0, 225)

[node name="10" type="Node2D" parent="BoardingPoints"]
position = Vector2(0, 250)

[node name="11" type="Node2D" parent="BoardingPoints"]
position = Vector2(0, 275)

[node name="12" type="Node2D" parent="BoardingPoints"]
position = Vector2(0, 300)

[node name="13" type="Node2D" parent="BoardingPoints"]
position = Vector2(0, 325)

[node name="14" type="Node2D" parent="BoardingPoints"]
position = Vector2(0, 350)

[node name="BoardingSFX" type="AudioStreamPlayer2D" parent="."]
modulate = Color(0.752941, 0.752941, 0.752941, 1)
stream = ExtResource("3_jpwrk")
volume_db = -20.0
max_polyphony = 10
bus = &"Train"

[node name="CharacterBoundary" type="StaticBody2D" parent="."]
collision_layer = 1024
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBoundary"]
position = Vector2(-59, -11)
shape = SubResource("SegmentShape2D_635ql")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CharacterBoundary"]
position = Vector2(58, -11)
shape = SubResource("SegmentShape2D_635ql")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="CharacterBoundary"]
position = Vector2(-59, -11)
shape = SubResource("SegmentShape2D_aoju7")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="CharacterBoundary"]
position = Vector2(-59, 356)
shape = SubResource("SegmentShape2D_aoju7")

[node name="CharacterSpawnPoint" type="Node2D" parent="."]
position = Vector2(0, 171)
